--- a/enroll2.html
+++ b/enroll2.html
@@ -207,19 +207,19 @@
         <form>
             <div id="name">
                 <h2 class="name">NAME</h2>
-                <input class="firstname" type="rext" name="first_name"><br>
+                <input class="firstname" type="rext" name="first_name" required><br>
                 <label class="firstlabel">FIRST NAME</label>
-                <input class="lastname" type="text" name="last_name">
+                <input class="lastname" type="text" name="last_name" required>
                 <label class="lastlabel">LAST NAME</label>
 
             </div>
             <h2 class="name">MOBILE NO.</h2>
-            <input class="code" type="number" name="code">
+            <input class="code" type="number" name="code" >
             <label class="area-code">AREA CODE</label>
-            <input class="number" type="text" name="phone">
+            <input class="number" type="text" name="phone" required>
             <label class="phone-number">Phone number</label>
             <h2 class="name">Email</h2>
-            <input class="email" type="email" name="email">
+            <input class="email" type="email" name="email" required>
             <h2 class="name">STREAM</h2>
             <input class="stream" type="text" name="stream">
             <h2 class="name">SUBJECT</h2>
